Fix some problems with the winner check.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ set_target_properties(appQ3DTicTacToe PROPERTIES
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
+
+    OUTPUT_NAME "3DTicTacToe"
 )
 
 target_link_libraries(appQ3DTicTacToe
